bk_ida/gobmkida/c3/update_liberties
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/update_liberties/src/engine/board.c:3421:27: error: use of undeclared identifier 'dword_A9019C'
if ( !byte_9C689F[v15] && dword_A9019C[v15] != v14 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/update_liberties/src/engine/board.c:3421:7: error: use of undeclared identifier 'byte_9C689F'
if ( !byte_9C689F[v15] && dword_A9019C[v15] != v14 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/update_liberties/src/engine/board.c:3429:1: error: use of undeclared identifier 'dword_A9019C'
dword_A9019C[v15] = v14; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/update_liberties/src/engine/board.c:3431:7: error: use of undeclared identifier 'byte_9C688C'
if ( !byte_9C688C[v15] && string_number[v15 + 384] != v14 ) 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/update_liberties/src/obj/1/board.o] Error 1
